Alignment and size fixes

--- a/common/common.scss
+++ b/common/common.scss
@@ -64,6 +64,11 @@ $max-width: 600px;
     color: #6161FF;
   }
 
+  p {
+    margin-top: 0px;
+    margin-bottom: 26px;
+  }
+
   .search-icon {
     position: absolute;
     z-index: 2;
