--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -17,10 +17,15 @@
 /* fix font for search banner */
 .custom-search-banner h1 {
   font-family: "Poppins", sans-serif;
-  font-size: 50px;
+  font-size: 56px;
+  font-weight: 600;
 }
 .custom-search-banner p {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
 }
 
+.search-widget {
+  margin-left: 20px;
+  margin-right: 20px;
+}
